# advent-of-code

./: .gitignore  .gitmodules  Cargo.toml  README.md
src/: day_template.rs  lib.rs  main.rs
src/2022/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/2023/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs  pipe.rs
src/2024/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/2025/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/utils/: coord.rs  direction.rs  graph.rs  grid.rs  mod.rs  timing.rs
src/utils/grid/: algo.rs  coord.rs  direction.rs  mod.rs
