[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[lib]
name = "aocutils"
path = "src/lib.rs"

[[bin]]
name = "aoc"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
gcd = "2.3.0"
iter_tools = "0.20.0"
nalgebra = "0.33.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["cookies"] }
tokio = { version = "1.41.1", features = ["full"] }
z3 = "0.12.1"
